--- a/transacoes.html
+++ b/transacoes.html
@@ -126,7 +126,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="transacoes.html">Transações</a></li>
                 <li class="nav-item"><a class="nav-link" href="relatorio.html">Relatório e análises financeiras</a></li>
             </ul>
@@ -141,7 +141,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">Meu Perfil</a>
                         <a class="dropdown-item" href="#">Configurações</a>
-                        <a class="dropdown-item" href="#">Sair</a>
+                        <a class="dropdown-item" href="index.html">Sair</a>
                     </div>
                 </div>
 
