alterado a imagem de perfil

--- a/dashboard.html
+++ b/dashboard.html
@@ -134,7 +134,7 @@
                 <!-- Dropdown do perfil -->
                 <div class="dropdown">
                     <button class="btn dropdown-toggle p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="./images/perfil.jpg" alt="Perfil" class="rounded-circle mr-2" style="width: 40px; height: 40px; object-fit: cover;">
+                        <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2" style="width: 40px; height: 40px; object-fit: cover;">
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">Meu Perfil</a>
