--- a/dashboard.html
+++ b/dashboard.html
@@ -139,6 +139,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">Meu Perfil</a>
                         <a class="dropdown-item" href="#">Configurações</a>
+                        <a class="dropdown-item" href="#">Central de ajuda</a>
                         <a class="dropdown-item" href="index.html">Sair</a>
                     </div>
                 </div>
