--- a/dashboard.html
+++ b/dashboard.html
@@ -384,49 +384,49 @@
                             <h6>Meios de pagamentos mais usados</h6>
                             <div class="mt-3">
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/card.svg" alt="Crédito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="/images/cartão.svg" alt="Crédito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Crédito</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 80%;">230 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/pix.svg" alt="Pix" class="mr-2" style="width: 47px; height: 44px; object-fit: cover;">
+                                    <img src="/images/pix-1.svg" alt="Pix" class="mr-2" style="width: 47px; height: 44px; object-fit: cover;">
                                     <span class="flex-grow-1">Pix</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 70%;">198 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/card.svg" alt="Débito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="/images/cartão.svg" alt="Débito" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Débito</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 60%;">147 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/Dinheiro.svg" alt="Dinheiro" class="mr-2" style="width: 41px; height: 30px; object-fit: cover;">
+                                    <img src="/images/nota.svg" alt="Dinheiro" class="mr-2" style="width: 41px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Dinheiro</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 40%;">99 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/card.svg" alt="Vale refeição" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="/images/cartão.svg" alt="Vale refeição" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Vale refeição</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 20%;">33 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/card.svg" alt="Vale alimentação" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="/images/cartão.svg" alt="Vale alimentação" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Vale alimentação</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 5%;">5 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/card.svg" alt="Outros" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
+                                    <img src="/images/cartão.svg" alt="Outros" class="mr-2" style="width: 45px; height: 35px; object-fit: cover;">
                                     <span class="flex-grow-1">Outros</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 0%;">0 Vendas</div>
