--- a/dashboard.html
+++ b/dashboard.html
@@ -294,35 +294,35 @@
                             <h6>Região com mais vendas</h6>
                             <div class="mt-3">
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/prédio.svg" alt="Jabaquara" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="/images/casa-1.svg" alt="Jabaquara" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Jabaquara</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 80%;">230 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/prédio.svg" alt="Moema" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="/images/casa-1.svg" alt="Moema" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Moema</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 70%;">198 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/prédio.svg" alt="Saúde" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="/images/casa-1.svg" alt="Saúde" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Saúde</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 60%;">147 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/prédio.svg" alt="São Judas" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="/images/casa-1.svg" alt="São Judas" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">São Judas</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 40%;">99 Vendas</div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="./images/prédio.svg" alt="Ibirapuera" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="/images/casa-1.svg" alt="Ibirapuera" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
                                     <span class="flex-grow-1">Ibirapuera</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 20%;">33 Vendas</div>
