--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <h3 class="text-dark mb-4">Financeiro</h3>
       <form>
         <div class="form-group mb-3">
-          <input type="email" class="form-control" id="email" placeholder="exemplo@email.com" required>
+          <input type="email" class="form-control" id="email" placeholder="exemplo@email.com (Não precisa)" required>
         </div>
         <div class="form-group mb-3">
-          <input type="password" class="form-control" id="password" placeholder="Senha" required>
+          <input type="password" class="form-control" id="password" placeholder="Senha (Não precisa)" required>
         </div>
         <!-- Substituímos o botão de submit por um link âncora -->
         <a href="dashboard.html" class="btn btn-danger btn-block">Entrar</a>
