--- a/transacoes.html
+++ b/transacoes.html
@@ -186,7 +186,7 @@
                 </div>
                 <!-- Coloca o botão no canto superior direito -->
                 <div class="ml-auto">
-                    <button class="btn btn-primary">Baixar transações &#8681;</button>
+                    <button class="btn btn-primary" id="baixar-transacoes">Baixar transações &#8681;</button>
                 </div>
             </div>
             <div class="row mt-3">
@@ -223,7 +223,7 @@
         
         <!-- Tabela de Transações -->
         <div class="table-responsive">
-            <table class="table table-bordered table-striped">
+            <table class="table table-bordered table-striped" id="tabela-transacoes">
                 <thead>
                     <tr>
                         <th>Valor Bruto</th>
@@ -284,11 +284,27 @@
                 notificationBox.style.display = 'block';
             }
         }
+
+        // Função para baixar a tabela de transações como PDF
+        document.getElementById('baixar-transacoes').addEventListener('click', function() {
+            var element = document.querySelector('#tabela-transacoes'); // Captura a tabela de transações
+
+            var opt = {
+                margin:       0.5,
+                filename:     'transacoes.pdf',
+                image:        { type: 'jpeg', quality: 0.98 },
+                html2canvas:  { scale: 2, useCORS: true },
+                jsPDF:        { unit: 'in', format: 'a4', orientation: 'landscape' } // Orientação paisagem
+            };
+
+            html2pdf().from(element).set(opt).save();
+        });
     </script>
 
     <!-- Importando scripts JavaScript do Bootstrap e do jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 </body>
 </html>
