--- a/relatorio.html
+++ b/relatorio.html
@@ -155,145 +155,17 @@
         </div>
     </div>
 
-    <!-- Scripts para gráficos e notificações -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <script>
-        // Função para exibir/ocultar a caixa de notificações
-        function toggleNotifications() {
-            var notificationBox = document.getElementById('notificationBox');
-            if (notificationBox.style.display === 'block') {
-                notificationBox.style.display = 'none';
-            } else {
-                notificationBox.style.display = 'block';
-            }
-        }
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 
-        // Gráfico de Rosca para Receita, Despesas e Lucro Líquido
-        document.addEventListener('DOMContentLoaded', function () {
-            const doughnutCtx = document.getElementById('doughnutChart').getContext('2d');
-            const doughnutChart = new Chart(doughnutCtx, {
-                type: 'doughnut',
-                data: {
-                    labels: ['Receita', 'Despesas', 'Lucro Líquido'],
-                    datasets: [{
-                        data: [11503.44, 1604.44, 9899.00],
-                        backgroundColor: ['#ffc107', '#dc3545', '#28a745'] 
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            position: 'top',
-                        },
-                        datalabels: {
-                            formatter: (value, context) => {
-                                const sum = context.dataset.data.reduce((a, b) => a + b, 0);
-                                const percentage = (value * 100 / sum).toFixed(1) + "%";
-                                return percentage;
-                            },
-                            color: '#fff',
-                            font: {
-                                weight: 'bold'
-                            }
-                        }
-                    }
-                },
-                plugins: [ChartDataLabels]
-            });
-
-            const barCtx = document.getElementById('barChart').getContext('2d');
-            const barChart = new Chart(barCtx, {
-                type: 'bar',
-                data: {
-                    labels: ['Janeiro', 'Fevereiro', 'Março'],
-                    datasets: [
-                        {
-                            label: 'Despesas',
-                            data: [374.44, 500.00, 730.00],
-                            backgroundColor: '#dc3545',
-                            borderColor: '#dc3545',
-                            borderWidth: 1
-                        },
-                        {
-                            label: 'Lucro Líquido',
-                            data: [2183.95, 3435.05, 4280.00],
-                            backgroundColor: '#28a745',
-                            borderColor: '#28a745',
-                            borderWidth: 1
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            stacked: true
-                        },
-                        y: {
-                            beginAtZero: true,
-                            stacked: true,
-                            ticks: {
-                                display: false
-                            },
-                            grid: {
-                                drawBorder: false,
-                                display: false
-                            }
-                        }
-                    },
-                    plugins: {
-                        legend: {
-                            position: 'top'
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    return tooltipItem.dataset.label + ': R$ ' + tooltipItem.raw.toFixed(2);
-                                }
-                            }
-                        },
-                        datalabels: {
-                            display: false
-                        }
-                    }
-                },
-                plugins: [ChartDataLabels]
-            });
-        });
-
-        // Função para baixar o relatório como PDF
-        document.getElementById('baixar-relatorio').addEventListener('click', function() {
-    var element = document.querySelector('.card-relatorio-financeiro'); // Seleciona o card original
-
-    // Expandir o card para capturar todo o conteúdo sem rolagem
-    element.style.maxHeight = 'none';
-    element.style.overflow = 'visible';
-    
-    var opt = {
-        margin:       0.5,
-        filename:     'relatorio_financeiro_completo.pdf',
-        image:        { type: 'jpeg', quality: 0.98 },
-        html2canvas:  { scale: 2, useCORS: true, scrollY: 0 }, // Garante a captura correta sem rolagem
-        jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
-    };
-
-    // Gerar o PDF
-    html2pdf().from(element).set(opt).save().then(function() {
-        // Restaurar o estilo original do card
-        element.style.maxHeight = '400px';  // Ajuste de acordo com o layout original
-        element.style.overflow = 'auto';    // Restaurar a rolagem
-    });
-});
-
-    </script>
-
-    <!-- Importando scripts JavaScript do Bootstrap e do jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+<!-- Incluindo scripts separados -->
+<script src="relatorio.js"></script>
+<script src="script.js"></script>
+<script src="pdf.js"></script>
 
 </body>
 </html>
