--- a/transacoes.html
+++ b/transacoes.html
@@ -172,5 +172,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
     <script src="notificao.js"></script>
+    <script src="pdf-transacoes.js"></script>
 </body>
 </html>
