pdf.js mudou o nome para pdf-resumo

--- a/relatorio.html
+++ b/relatorio.html
@@ -165,7 +165,7 @@
 <!-- Incluindo scripts separados -->
 <script src="relatorio.js"></script>
 <script src="notificao.js"></script>
-<script src="pdf.js"></script>
+<script src="pdf-resumo.js"></script>
 
 </body>
 </html>
