--- a/relatorio.html
+++ b/relatorio.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Financeiro</title>
     <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png">
-    <!-- Importando o CSS do Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> <!-- Seu CSS customizado -->
+    <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Navbar Responsiva e Fixa no Topo -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mr-2" style="height: 40px;">
+            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar">
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,12 +25,10 @@
                 <li class="nav-item"><a class="nav-link" href="relatorio.html">Relatório e análises financeiras</a></li>
             </ul>
             <div class="d-flex align-items-center">
-                <button class="btn btn-outline-info mr-3">Nota Fiscal &#8681;</button>
-
-                <!-- Dropdown para o perfil -->
+                <button class="btn btn-outline-info mr-3">Nota Fiscal ⇩</button>
                 <div class="dropdown">
                     <button class="btn dropdown-toggle p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2" style="width: 40px; height: 40px; object-fit: cover;">
+                        <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2 avatar-perfil">
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">Meu Perfil</a>
@@ -41,13 +37,9 @@
                         <a class="dropdown-item" href="index.html">Sair</a>
                     </div>
                 </div>
-
-                <!-- Sino de Notificações -->
                 <div class="notification-bell ml-3" onclick="toggleNotifications()">
-                    <i class="fas fa-bell text-secondary" style="font-size: 24px;"></i>
+                    <i class="fas fa-bell icone-sino"></i>
                     <span class="badge">3+</span>
-
-                    <!-- Caixa de Notificações -->
                     <div class="notification-box" id="notificationBox">
                         <h5>Notificações</h5>
                         <div class="notification-item">
@@ -72,9 +64,7 @@
         </div>
     </nav>
 
-    <!-- Ajuste de margem superior para o conteúdo, devido à navbar fixa -->
     <div class="container col-11 mt-5 pt-4">
-        <!-- Filtro de Relatório -->
         <div class="card p-3 mb-4 border-danger">
             <div class="d-flex justify-content-between align-items-center flex-wrap flex-md-nowrap">
                 <div class="mb-2 mb-md-0">
@@ -89,13 +79,12 @@
             </div>
         </div>
 
-        <!-- Relatório Personalizado -->
         <div class="row">
             <div class="col-md-6">
                 <div class="card p-3 border-danger">
                     <h5>Relatório Personalizado</h5>
                     <div class="d-flex justify-content-between align-items-center">
-                        <div class="chart-container" style="position: relative; height:34vh; width:34vw">
+                        <div class="chart-container">
                             <canvas id="doughnutChart"></canvas>
                         </div>
                         <div class="mr-5">
@@ -116,7 +105,7 @@
                 <div class="card p-3 border-danger card-relatorio-financeiro">
                     <div class="d-flex justify-content-between align-items-start">
                         <h5>Relatório Financeiro - Resumo de Janeiro a Março</h5>
-                        <a href="#" class="text-danger" id="baixar-relatorio">Baixar relatório &#8681;</a>
+                        <a href="#" class="text-danger" id="baixar-relatorio">Baixar relatório ⇩</a>
                     </div>
                     <p>O relatório apresenta um resumo financeiro do período de 01/01/2024 a 31/03/2024.</p>
                     <p><strong>Resumo Geral:</strong></p>
@@ -139,7 +128,6 @@
             </div>
         </div>
 
-        <!-- Gráfico Lucro Líquido vs Despesas -->
         <div class="row mt-4">
             <div class="col-md-12">
                 <div class="card p-3 border-danger">
@@ -156,16 +144,14 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-
-<!-- Incluindo scripts separados -->
-<script src="relatorio.js"></script>
-<script src="notificao.js"></script>
-<script src="pdf-resumo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
+    <script src="relatorio.js"></script>
+    <script src="notificao.js"></script>
+    <script src="pdf-resumo.js"></script>
 
 </body>
 </html>
