--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
     <!-- Navbar Responsiva e Fixa no Topo -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mr-2" style="height: 40px;">
+            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar mr-2">
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
                 <!-- Dropdown do perfil -->
                 <div class="dropdown">
                     <button class="btn dropdown-toggle p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2" style="width: 40px; height: 40px; object-fit: cover;">
+                        <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2 avatar-perfil">
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                         <a class="dropdown-item" href="#">Meu Perfil</a>
@@ -45,7 +45,7 @@
 
                 <!-- Sino de Notificações -->
                 <div class="notification-bell ml-3" onclick="toggleNotifications()">
-                    <i class="fas fa-bell text-secondary" style="font-size: 24px;"></i>
+                    <i class="fas fa-bell icone-sino"></i>
                     <span class="badge">3+</span>
 
                     <!-- Caixa de Notificações -->
