quando eu clico no dashboard fica vermelho

--- a/dashboard.html
+++ b/dashboard.html
@@ -384,5 +384,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="notificao.js"></script>
     <script src="dashboard.js"></script>
+    <script src="click.js"></script> </body>
 </body>
 </html>
