--- a/relatorio.html
+++ b/relatorio.html
@@ -152,6 +152,7 @@
     <script src="relatorio.js"></script>
     <script src="notificao.js"></script>
     <script src="pdf-resumo.js"></script>
+    <script src="click.js"></script> </body>
 
 </body>
 </html>
