--- a/transacoes.html
+++ b/transacoes.html
@@ -161,5 +161,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
     <script src="notificao.js"></script>
     <script src="pdf-transacoes.js"></script>
+    <script src="click.js"></script> </body>
 </body>
 </html>
