tirado o css que estava dentro do index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Financeiro</title>
-  <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png">
+  <link rel="icon" href="images/ifood_logo-baixa 1.svg">
   <!-- Importando o CSS do Bootstrap -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Importando seu CSS customizado -->
@@ -13,7 +13,7 @@
 <body id="loginPage">
   <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="login-box p-5 text-center">
-      <img src="images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mb-3" style="height: 60px;">
+      <img src="images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mb-3" >
       <h3 class="text-dark mb-4">Financeiro</h3>
       <form>
         <div class="form-group mb-3">
@@ -22,7 +22,6 @@
         <div class="form-group mb-3">
           <input type="password" class="form-control" id="password" placeholder="Senha (Não precisa)" required>
         </div>
-        <!-- Substituímos o botão de submit por um link âncora -->
         <a href="dashboard.html" class="btn btn-danger btn-block">Entrar</a>
         <div class="mt-3">
           <a href="#">Esqueceu a senha?</a>
