--- a/dashboard.html
+++ b/dashboard.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Financeiro</title>
     <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png">
-    <!-- Importando o CSS do Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> <!-- Seu CSS customizado -->
+    <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
 </head>
 <body>
-    <!-- Navbar Responsiva e Fixa no Topo -->
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand d-flex align-items-center" href="#">
             <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar mr-2">
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
+        <!-- navbar -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -56,7 +56,7 @@
                             <a href="#" class="details-link">Detalhes</a>
                         </div>
                         <div class="notification-item green">
-                            <p><strong style="color:green;">Dinheiro na conta!</strong><br>Você recebeu um pagamento de R$ 9.440,80</p>
+                            <p><strong >Dinheiro na conta!</strong><br>Você recebeu um pagamento de R$ 9.440,80</p>
                             <a href="#" class="details-link">Detalhes</a>
                         </div>
                         <div class="notification-item">
@@ -163,21 +163,21 @@
                                     <tbody>
                                         <tr>
                                             <td>1º</td>
-                                            <td><img src="./images/açai.svg" alt="Açaí 500 ml" class="img-thumbnail" style="width: 50px; height: 50px; object-fit: cover;"></td>
+                                            <td><img src="./images/açai.svg" alt="Açaí 500 ml" class="img-thumbnail"></td>
                                             <td>Açaí 500 ml</td>
                                             <td>390</td>
                                             <td>R$ 5.850,00</td>
                                         </tr>
                                         <tr>
                                             <td>2º</td>
-                                            <td><img src="./images/Smash burger.svg" alt="Smash burger" class="img-thumbnail" style="width: 50px; height: 50px; object-fit: cover;"></td>
+                                            <td><img src="./images/Smash burger.svg" alt="Smash burger" class="img-thumbnail"></td>
                                             <td>Smash burger</td>
                                             <td>283</td>
                                             <td>R$ 5.462,10</td>
                                         </tr>
                                         <tr>
                                             <td>3º</td>
-                                            <td><img src="./images/coca.svg" alt="Coca 350 ml" class="img-thumbnail" style="width: 50px; height: 50px; object-fit: cover;"></td>
+                                            <td><img src="./images/coca.svg" alt="Coca 350 ml" class="img-thumbnail"></td>
                                             <td>Coca 350 ml</td>
                                             <td>230</td>
                                             <td>R$ 1.035,00</td>
@@ -193,7 +193,7 @@
                             <h6>Região com mais vendas</h6>
                             <div class="mt-3">
                                 <div class="d-flex align-items-center mb-2">
-                                    <img src="/images/casa-1.svg" alt="Jabaquara" class="mr-2" style="width: 30px; height: 30px; object-fit: cover;">
+                                    <img src="/images/casa-1.svg" alt="Jabaquara" class="mr-2" >
                                     <span class="flex-grow-1">Jabaquara</span>
                                     <div class="progress w-50 mx-2">
                                         <div class="progress-bar bg-danger" style="width: 80%;">230 Vendas</div>
