--- a/transacoes.html
+++ b/transacoes.html
@@ -47,7 +47,7 @@
                             <a href="#" class="details-link">Detalhes</a>
                         </div>
                         <div class="notification-item green">
-                            <p><strong style="color:green;">Dinheiro na conta!</strong><br>Você recebeu um pagamento de R$ 9.440,80</p>
+                            <p><strong>Dinheiro na conta!</strong><br>Você recebeu um pagamento de R$ 9.440,80</p>
                             <a href="#" class="details-link">Detalhes</a>
                         </div>
                         <div class="notification-item">
