--- a/dashboard.html
+++ b/dashboard.html
@@ -108,7 +108,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card p-3 text-center border-danger">
                     <h5>Despesas</h5>
-                    <h3>R$ 1.080,43</h3>
+                    <h3 class="text-danger">R$ 1.080,43</h3>
                     <p>Total de taxas</p>
                     <a href="transacoes.html" class="text-danger">Ver despesas</a>
                 </div>
@@ -126,7 +126,7 @@
                     <div id="chart-placeholder">
                         <canvas id="salesChart" width="300" height="300"></canvas>
                     </div>
-                    <a href="#" class="text-danger">Ver vendas</a>
+                    <a href="relatorio.html" class="text-danger">Ver detalhes</a>
                 </div>
             </div>
 
@@ -336,7 +336,7 @@
 
                         <!-- Relatório Semana -->
                         <div class="report report-semana d-none">
-                            <h6>Dias com mais vendas <i class="fa fa-calendar"></i></h6>
+                            <h6>Dias com mais vendas</h6>
                             <div class="mt-3 text-center">
                                 <!-- Gráfico de barras para dias da semana -->
                                 <div class="bar-chart">
