--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Financeiro</title>
-  <link rel="icon" href="images/ifood_logo-baixa 1.svg">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <title>Login - Financeiro</title> 
+  <link rel="icon" href="images/ifood_logo-baixa 1.svg"> 
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> 
+  <link rel="stylesheet" href="style.css"> 
 </head>
-<body id="loginPage">
-  <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="login-box p-5 text-center">
-      <img src="images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mb-3" >
-      <h3 class="text-dark mb-4">Financeiro</h3>
-      <form>
+<body id="loginPage"> 
+  <div class="container d-flex justify-content-center align-items-center vh-100"> 
+    <!-- Container principal que centraliza o conteúdo na tela -->
+    <div class="login-box p-5 text-center"> 
+      <!-- Caixa de login -->
+      <img src="images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mb-3"> 
+      <h3 class="text-dark mb-4">Financeiro</h3> 
+      
+      <form> <!-- Formulário de login -->
         <div class="form-group mb-3">
-          <input type="email" class="form-control" id="email" placeholder="exemplo@email.com (Não precisa)" required>
+          <input type="email" class="form-control" id="email" placeholder="exemplo@email.com (Não precisa)" required> 
         </div>
         <div class="form-group mb-3">
-          <input type="password" class="form-control" id="password" placeholder="Senha (Não precisa)" required>
+          <input type="password" class="form-control" id="password" placeholder="Senha (Não precisa)" required> 
         </div>
-        <a href="dashboard.html" class="btn btn-danger btn-block">Entrar</a>
+        <a href="dashboard.html" class="btn btn-danger btn-block">Entrar</a> 
+        <!-- Botão de login (redireciona para dashboard.html) -->
         <div class="mt-3">
-          <a href="#">Esqueceu a senha?</a>
+          <a href="#">Esqueceu a senha?</a> 
         </div>
       </form>
     </div>
