--- a/transacoes.html
+++ b/transacoes.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Financeiro</title>
-    <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png">
+    <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png"> 
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="finance-page">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<body class="finance-page"> <!-- Corpo da página -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Barra de navegação -->
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar">
+            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar"> 
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span> <!-- Ícone para responsividade -->
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
+        <div class="collapse navbar-collapse" id="navbarNav"> <!-- Conteúdo da barra de navegação -->
+            <ul class="navbar-nav mx-auto"> 
                 <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="transacoes.html">Transações</a></li>
                 <li class="nav-item"><a class="nav-link" href="relatorio.html">Relatório e análises financeiras</a></li>
             </ul>
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center"> <!-- Botões e dropdown -->
                 <button class="btn btn-outline-info mr-3">Nota Fiscal ⇩</button>
-                <div class="dropdown">
+                <div class="dropdown"> <!-- Dropdown de perfil -->
                     <button class="btn dropdown-toggle p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <img src="/images/perfil.svg" alt="Perfil" class="rounded-circle mr-2 avatar-perfil">
                     </button>
@@ -37,10 +38,10 @@
                         <a class="dropdown-item" href="index.html">Sair</a>
                     </div>
                 </div>
-                <div class="notification-bell ml-3" onclick="toggleNotifications()">
+                <div class="notification-bell ml-3" onclick="toggleNotifications()"> <!-- Sino de notificações -->
                     <i class="fas fa-bell icone-sino"></i>
                     <span class="badge">3+</span>
-                    <div class="notification-box" id="notificationBox">
+                    <div class="notification-box" id="notificationBox"> <!-- Lista de notificações -->
                         <h5>Notificações</h5>
                         <div class="notification-item">
                             <p><strong>Transferência agendada!</strong><br>Você tem uma transferência agendada para o dia 31/04</p>
@@ -64,17 +65,17 @@
         </div>
     </nav>
 
-    <div class="container col-11 mt-5 pt-4">
-        <div class="card p-3 mb-4 border-danger">
+    <div class="container col-11 mt-5 pt-4"> <!-- Container principal -->
+        <div class="card p-3 mb-4 border-danger"> <!-- Cartão com filtro de transações -->
             <div class="d-flex justify-content-between align-items-center">
                 <div>
                     <span class="font-weight-bold">Filtrar transações</span>
                 </div>
                 <div class="ml-auto">
-                    <button class="btn btn-primary" id="baixar-transacoes">Baixar transações ⇩</button>
+                    <button class="btn btn-primary" id="baixar-transacoes">Baixar transações ⇩</button> 
                 </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mt-3"> <!-- Linha com campos de filtro -->
                 <div class="col-md-3">
                     <label for="start-date">Data da transferência (início)</label>
                     <input type="date" id="start-date" class="form-control">
@@ -98,7 +99,7 @@
             </div>
         </div>
         
-        <div class="table-responsive">
+        <div class="table-responsive"> <!-- Tabela de transações -->
             <table class="table table-bordered table-striped" id="tabela-transacoes">
                 <thead>
                     <tr>
@@ -145,16 +146,17 @@
             </table>
         </div>
         <div class="text-center">
-            <a href="#" class="text-danger">Ver mais</a>
+            <a href="#" class="text-danger">Ver mais</a> 
         </div>
     </div>
 
+    <!-- Importação de bibliotecas JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-    <script src="notificao.js"></script>
-    <script src="pdf-transacoes.js"></script>
-    <script src="click.js"></script> </body>
+    <script src="notificao.js"></script> <!-- Script das notificações -->
+    <script src="pdf-transacoes.js"></script> <!-- Script para gerar PDF das transações -->
+    <script src="click.js"></script> <!-- Script para eventos de clique -->
 </body>
 </html>
