criando uma pasta para os arquivos js

--- a/relatorio.html
+++ b/relatorio.html
@@ -150,9 +150,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-    <script src="relatorio.js"></script> <!-- Script do relatório -->
-    <script src="notificao.js"></script> <!-- Script das notificações -->
-    <script src="pdf-resumo.js"></script> <!-- Script para gerar PDF do resumo -->
-    <script src="click.js"></script> <!-- Script para eventos de clique -->
+    <script src="/js/relatorio.js"></script> <!-- Script do relatório -->
+    <script src="/js/notificao.js"></script> <!-- Script das notificações -->
+    <script src="/js/pdf-resumo.js"></script> <!-- Script para gerar PDF do resumo -->
+    <script src="/js/click.js"></script> <!-- Script para eventos de clique -->
 </body>
 </html>
