--- a/transacoes.html
+++ b/transacoes.html
@@ -155,8 +155,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-    <script src="notificao.js"></script> <!-- Script das notificações -->
-    <script src="pdf-transacoes.js"></script> <!-- Script para gerar PDF das transações -->
-    <script src="click.js"></script> <!-- Script para eventos de clique -->
+    <script src="/js/notificao.js"></script> <!-- Script das notificações -->
+    <script src="/js/pdf-transacoes.js"></script> <!-- Script para gerar PDF das transações -->
+    <script src="/js/click.js"></script> <!-- Script para eventos de clique -->
 </body>
 </html>
