arrumando o link do css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Login - Financeiro</title> 
   <link rel="icon" href="/images/ifood_logo-baixa 1.svg"> 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> 
-  <link rel="stylesheet" href="/style.css"> 
+  <link rel="stylesheet" href="style.css"> 
 </head>
 <body id="loginPage"> 
   <div class="container d-flex justify-content-center align-items-center vh-100"> 
